# Template_VSC_ST-Link

./: CMakeLists.txt  arm-none-eabi-gcc.cmake
main/: main.c  main.h
